Small perf improvements.